--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/kit": "^2.50.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
+		"@tailwindcss/forms": "^0.5.11",
 		"@tailwindcss/vite": "^4.1.18",
 		"@types/node": "^24",
 		"better-auth": "^1.4.18",
@@ -48,6 +49,7 @@
 		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
+		"@lucide/svelte": "^0.575.0",
 		"postgres": "^3.4.8"
 	}
 }
