--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 	},
 	"dependencies": {
 		"@lucide/svelte": "^0.575.0",
-		"postgres": "^3.4.8"
+		"postgres": "^3.4.8",
+		"valibot": "^1.2.0"
 	}
 }
