feat: integrate Sentry for error tracking and performance monitoring
- Added Sentry initialization in hooks.client.ts with configuration for error tracking, session replay, and logging.
- Updated hooks.server.ts to include Sentry's error handling and integrated it with the existing authentication flow.
- Created instrumentation.server.ts for Sentry's server-side instrumentation setup.
- Modified svelte.config.js to enable tracing and instrumentation features for Sentry.
- Updated vite.config.ts to include Sentry's Vite plugin for enhanced integration.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ AGENTS.md
 .prettierignore
 .prettierrc
 eslint.config.js
+drizzle
+tsconfig.json
 
 # Output
 .output
@@ -172,7 +174,7 @@ package
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
+.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
@@ -216,3 +218,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,svelte,dotenv,node,windows
+# Sentry Config File
+.env.sentry-build-plugin
